--- a/gnaiq/style.css
+++ b/gnaiq/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-  background-color: darkgrey;
+  background-image: linear-gradient(black, #5a3b0e);
   color: yellow;
   text-align: center;
   font-size: 2em;
@@ -31,6 +31,14 @@ body {
   margin: auto;
   text-align: left;
 } */
+
+.party-types ul{
+  list-style: none;
+}
+
+.party-types ul li:nth-of-type(even){
+  animation: wiggle 1s infinite alternate-reverse;
+}
 
 .party-types ul li:nth-of-type(odd){
   animation: wiggle 1s infinite alternate;
@@ -77,22 +85,27 @@ body {
     border-radius: 100%;
     border: 10px solid lightyellow;
     background-color: yellow;
-    color: darkgrey;
+    color: #5a3b0e;
     padding: 50px;
     filter: drop-shadow(0 0 25px lightyellow);
 }
 
 .how-it-happened p:after{
-    content: '🥮🌕 MID-AUTUMN DINNER 🥮🌕';
+    content: '🥮🌕 MID-AUTUMN DINNER 🥮🌕 ..... Saturday, September 10, 7:00 PM';
     display: block;
     border: 1px solid grey;
     border-radius: 25px;
     padding: 50px;
-    margin: 400px;
+    margin: 100px 400px;
+    font-size: 72pt;
 }
 
-.how-it-ended{
+.how-it-ended img{
+    border-radius: 100%;
+}
 
+p a{
+  color: yellow;
 }
 
 @media only screen and (max-width: 600px) {
